--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <Main>
         <h1>Esto es el ejercico1 de Documentacion</h1>
+        <h2>Esto es una actualizacion</h2>
     </Main>
     
 </body>
